    - Bug fixed
       - Potential NPE in ServerServlet#init(Application).
         Reported by Bryan Hunt.
       - The Application(Context) constructor now behaves like the
         setContext(Context) method. Reported by Bryan Hunt.
       - Fixed internal HTTPS server which wasn't creating an HTTPS
         request with all SSL related properties. 
         Reported by Henry Story.
    - API changes
       - Added Authenticator#multiAuthenticating to better control
         optional authenticators and ensure we don't attempt 
         several authentications if not necessary.
       - Added ClientInfo#certificates and cipherSuite properties
         and deprecated related attributes.
       - Added shortcut ClientResource#addQueryParameter and
         addSegment methods, based on the "reference" property.
       - Added WadlApplication#canDescribe() method to facilitate
         customization.

- 2.1 Milestone 7 (08/24/2011)
    - Bug fixed
       - Fixed blocking regression in the GWT edition that avoids to 
         compile client proxies. Reported by Joscha Feth.
      
- 2.1 Milestone 6 (08/20/2011)
    - Breaking change
      - When retrieving or updating the raw headers in the Request or 
        Response attributes, the type should now be Series<Header> 
        instead of Series<Parameter>.
      - The SecretVerifier.verify(identifier, secret) nows returns an
        integer instead of a Boolean for more precise answers such as
        for stale credentials (expired password).
    - API changes
      - Renamed UniformResource into Resource with proper deprecation.
      - Added NamedValue interface to support common behavior in Series
        instead of having to rely on the Parameter class as a base class.
      - Updated the Series class to not need to use a subclass all the time
        such as Form, CookieSeries and CookieSettingSeries. Now it is a 
        concrete class, taking a Class parameter at construction time such 